--- a/hyprland.conf
+++ b/hyprland.conf
@@ -27,6 +27,8 @@ $menu = rofi -show drun
 # exec-once = nm-applet &
 exec-once = hyprpanel &
 exec-once = hyprpaper &
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
 #############################
@@ -38,6 +40,15 @@ exec-once = hyprpaper &
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+# Screen sharing and portal environment variables
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+# Additional video/codec environment variables
+env = LIBVA_DRIVER_NAME,auto
+env = WLR_NO_HARDWARE_CURSORS,1
+
 
 ###################
 ### PERMISSIONS ###
@@ -47,13 +58,15 @@ env = HYPRCURSOR_SIZE,24
 # Please note permission changes here require a Hyprland restart and are not applied on-the-fly
 # for security reasons
 
-# ecosystem {
-#   enforce_permissions = 1
-# }
+ecosystem {
+  enforce_permissions = 1
+}
 
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
+# Screen sharing and screenshot permissions
+permission = .*/bin/grim, screencopy, allow
+permission = .*/libexec/xdg-desktop-portal-hyprland, screencopy, allow
+permission = .*/bin/slurp, screencopy, allow
+permission = .*/bin/wl-clipboard, screencopy, allow
 
 
 #####################
