--- a/modules/desktop/hyprland/hyprland.conf
+++ b/modules/desktop/hyprland/hyprland.conf
@@ -49,6 +49,9 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = LIBVA_DRIVER_NAME,auto
 env = WLR_NO_HARDWARE_CURSORS,1
 
+# Electron/Chromium Wayland support
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+
 
 ###################
 ### PERMISSIONS ###
